--- a/CSS/style.css
+++ b/CSS/style.css
@@ -631,7 +631,7 @@ body {
 }
 
 .review-card {
-    width: 100%;  /* 讓卡片填滿網格空間 */
+    width: 90%;  /* 讓卡片填滿網格空間 */
 }
 
 .review-item {
@@ -656,7 +656,7 @@ body {
 }
 
 .user-info {
-    text-align: left;  /* 確保用戶信息靠左對齊 */
+    text-align: left;  
 }
 
 .user-name {
@@ -666,7 +666,7 @@ body {
 
 .post-time {
     font-size: 0.6em;
-    color: #777;
+    color: #3A2513;
     margin-top: 4px;
 }
 
