--- a/CSS/loader.css
+++ b/CSS/loader.css
@@ -10,7 +10,8 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(255, 255, 255, 1); 
+    background-color: rgb(255, 165, 24, 1); 
+    /* color: rgb(255, 165, 24); */
     display: flex;
     justify-content: center;
     align-items: center;
